[gd_scene load_steps=13 format=3 uid="uid://c40hnj5wd8td1"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_02/actividad_05.gd" id="1_mtcvh"]
[ext_resource type="Texture2D" uid="uid://bubwa8y326sk3" path="res://img/nucleo_02/actividad_05/info_01.png" id="2_mrfgg"]
[ext_resource type="PackedScene" uid="uid://bt58lk6jwxluf" path="res://scenes/elementos/boton_l.tscn" id="2_v0167"]
[ext_resource type="Texture2D" uid="uid://bli7md7mq0gkm" path="res://img/nucleo_02/actividad_05/info_02.png" id="3_1ocsd"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="3_hd8gc"]

[sub_resource type="Gradient" id="Gradient_omu4s"]
offsets = PackedFloat32Array(0, 0.967871)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_scitm"]
gradient = SubResource("Gradient_omu4s")

[sub_resource type="Animation" id="Animation_3cb0a"]
resource_name = "new_animation"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dqcue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10qrc"]
_data = {
"RESET": SubResource("Animation_dqcue"),
"new_animation": SubResource("Animation_3cb0a")
}

[sub_resource type="Animation" id="Animation_0iujq"]
resource_name = "new_animation2"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe2ud"]
_data = {
"new_animation2": SubResource("Animation_0iujq")
}

[node name="Actividad05" type="Node2D"]
script = ExtResource("1_mtcvh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(969, 529.5)
scale = Vector2(8.73438, 1381)
texture = SubResource("GradientTexture1D_scitm")
metadata/_edit_lock_ = true

[node name="Info01" type="Sprite2D" parent="."]
position = Vector2(965, 538)
texture = ExtResource("2_mrfgg")

[node name="AnimationPlayer1" type="AnimationPlayer" parent="Info01"]
libraries = {
"": SubResource("AnimationLibrary_10qrc")
}

[node name="Titila" parent="Info01" instance=ExtResource("3_hd8gc")]
visible = false
position = Vector2(89, 241)
scale = Vector2(1.95884, 0.859813)
color = Color(0.909804, 0, 0.490196, 1)

[node name="BotonL" parent="Info01" instance=ExtResource("2_v0167")]
visible = false
offset_left = 129.0
offset_top = 281.0
offset_right = 847.0
offset_bottom = 396.0
color = Color(0.909804, 0, 0.490196, 1)
texto = "SIGUIENTE"

[node name="Info02" type="Sprite2D" parent="."]
visible = false
position = Vector2(948, 488)
texture = ExtResource("3_1ocsd")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Info02"]
libraries = {
"": SubResource("AnimationLibrary_oe2ud")
}

[node name="Titila" parent="Info02" instance=ExtResource("3_hd8gc")]
visible = false
position = Vector2(151, 389)
scale = Vector2(1.95884, 0.859813)
color = Color(0.909804, 0, 0.490196, 1)

[node name="BotonL2" parent="Info02" instance=ExtResource("2_v0167")]
visible = false
offset_left = 201.0
offset_top = 429.0
offset_right = 919.0
offset_bottom = 544.0
color = Color(0.909804, 0, 0.490196, 1)
texto = "FINALIZAR"

[connection signal="animation_finished" from="Info01/AnimationPlayer1" to="." method="_on_animation_player_1_animation_finished"]
[connection signal="button_down" from="Info01/BotonL" to="." method="_on_boton_l_button_down"]
[connection signal="animation_finished" from="Info02/AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
[connection signal="button_down" from="Info02/BotonL2" to="." method="_on_boton_l_2_button_down"]
